unpackaged/main/default/objects/ETT_Tools_Material_Usage__c/ETT_Tools_Material_Usage__c.object-meta.xml
<CustomObject>
    <label>Tools/Material Usage</label>
    <nameField>
        <displayFormat>USAGE-{0000000}</displayFormat>
        <label>Tools/Material Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tools/Material Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>