unpackaged/main/default/objects/ETT_Tools_Material_Usage__c/fields/ETT_Job_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Card__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>ETT_Job_Card__c</referenceTo>
    <relationshipLabel>Tools/Material Usage</relationshipLabel>
    <relationshipName>Tools_Material_Usage</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>