unpackaged/main/default/objects/ETT_Tools_Material_Usage__c/fields/ETT_Tools_Material_Allocation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tools_Material_Allocation__c</fullName>
    <label>Tools/Material Allocation</label>
    <referenceTo>ETT_Tools_Allocation__c</referenceTo>
    <relationshipLabel>Tools/Material Usage</relationshipLabel>
    <relationshipName>Tools_Material_Usage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>