unpackaged/main/default/objects/ETT_Tools_Material_Usage__c/fields/ETT_Usage_Value__c.field-meta.xml
<CustomField>
    <fullName>ETT_Usage_Value__c</fullName>
    <inlineHelpText>The value&#39;s unit depending upon master record unit type quantity based/length based/Grams based etc. For depreciable type keep this as blank</inlineHelpText>
    <label>Usage Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>