unpackaged/main/default/objects/ETT_Tools_Material_Usage__c/fields/ETT_Version_number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Version_number__c</fullName>
    <label>Version number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>